# claude-ollama-orchestrator

./: .gitignore  README.md  conftest.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: architecture.md  ollama-delegation-best-practices.md  user-guide.md
fuzz/: fuzz_parse_output.py
skills/ollama/: SKILL.md
skills/ollama/agents/: ollama-coder.md  ollama-explainer.md  ollama-reviewer.md  ollama-tester.md  ollama-thinking.md  ollama-transcribe.md  ollama-vision.md
skills/ollama/references/: delegation-prompting.md
skills/ollama/scripts/: __init__.py  agent_schema.py  backend.py  binary_input.py  circuit_breaker.py  diff_guard.py  errors.py  input_size.py  ollama_config.py  ollama_init.py  ollama_preflight.py  ollama_stream.py  ollama_vision.py  parse_output.py  run_lock.py  run_ollama.py  sanitize.py  scheduler.py  startup_hardening.py  status_display.py  stderr_shim.py  temp_dirs.py  token_stats.py  transcribe.py  (+1 more)
tests/: test_agent_schema.py  test_binary_input.py  test_circuit_breaker.py  test_diff_guard.py  test_errors.py  test_input_size.py  test_interface_contracts.py  test_ollama_backend.py  test_ollama_config.py  test_ollama_init.py  test_ollama_preflight.py  test_ollama_stream.py  test_ollama_vision.py  test_parse_output.py  test_run_lock.py  test_run_ollama.py  test_sanitize.py  test_scheduler.py  test_skill_structure.py  test_startup_hardening.py  test_status_display.py  test_stderr_shim.py  test_temp_dirs.py  test_token_stats.py  test_transcribe.py  test_validate.py
tests/integration/: test_sse_chunk_boundaries.py
